cluster/homelab/apps/uptimekuma/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uptimekuma
    namespace: uptimekuma
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Uptime Monitor
        gethomepage.dev/group: Monitoring
        gethomepage.dev/icon: uptimekuma
        gethomepage.dev/name: Uptime Kuma
        gethomepage.dev/widget.type: uptime-kuma
        gethomepage.dev/widget.url: https://uptimekuma.stefangenov.site
        gethomepage.dev/widget.slug: default
